--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -40,17 +40,9 @@ jobs:
             --name "${{ github.event.inputs.vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts '
-            cd "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
-            
-            # Verify configuration.json exists and has correct settings
-            if (Test-Path ".\configuration.json") {
-                Write-Host "Found configuration.json"
-                Get-Content ".\configuration.json"
-            } else {
-                Write-Error "configuration.json not found!"
-                exit 1
-            }
-            
-            # Run the exact commands from the documentation
-            Import-Module .\Deployment.psm1
-            Initialize-DeploymentEnvironment' 
+            # Start a new elevated PowerShell session
+            Start-Process powershell -Verb RunAs -ArgumentList "-Command {
+                Set-Location ""C:\Temp\EdFi.Suite3.RestApi.Databases.Standard""
+                Import-Module .\Deployment.psm1
+                Initialize-DeploymentEnvironment
+            }" -Wait -WindowStyle Hidden' 
