--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -33,13 +33,25 @@ jobs:
         with:
           creds: '{"clientId":"${{ env.ARM_CLIENT_ID }}","clientSecret":"${{ env.ARM_CLIENT_SECRET }}","subscriptionId":"${{ env.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ env.ARM_TENANT_ID }}"}'
 
-      - name: Run Deployment Commands
+      - name: Create and Run Automation Runbook
         run: |
-          az vm run-command invoke \
-            --command-id RunPowerShellScript \
-            --name "${{ github.event.inputs.vm_name }}" \
+          # Create runbook content
+          $runbookContent = @'
+          cd "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
+          Import-Module .\Deployment.psm1
+          Initialize-DeploymentEnvironment
+          '@
+          
+          # Create and publish runbook
+          az automation runbook create \
+            --automation-account-name "YourAutomationAccount" \
+            --name "DeployODS" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
-            --scripts '
-            cd "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
-            Import-Module .\Deployment.psm1
-            Initialize-DeploymentEnvironment' 
+            --type PowerShell \
+            --content "$runbookContent"
+          
+          # Run the runbook
+          az automation runbook start \
+            --automation-account-name "YourAutomationAccount" \
+            --name "DeployODS" \
+            --resource-group "${{ github.event.inputs.resource_group }}" 
