--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -35,36 +35,26 @@ jobs:
 
       - name: Run Deployment Commands
         run: |
-          # Create the deployment script content
           SCRIPT_CONTENT='
           Set-Location "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
           
-          # Create deployment script
-          $deployScript = @"
-          Set-Location \"C:\Temp\EdFi.Suite3.RestApi.Databases.Standard\"
+          $script = "# Script: InitializeDeployment.ps1
           
-          Write-Host "Importing Deployment Module..."
+          # Import the module. If this succeeds ($? will be $true),
+          # then run the next command.
           Import-Module .\Deployment.psm1
-          if (-not $?) {
-              Write-Error "Failed to import Deployment module"
+          
+          # Check if previous command was successful
+          if ($?) {
+              Initialize-DeploymentEnvironment
+          } else {
+              Write-Error \"Failed to import Deployment.psm1. Aborting.\"
               exit 1
-          }
+          }"
           
-          Write-Host "Initializing Deployment Environment..."
-          Initialize-DeploymentEnvironment
-          if (-not $?) {
-              Write-Error "Failed to initialize deployment environment"
-              exit 1
-          }
+          Set-Content -Path "InitializeDeployment.ps1" -Value $script
           
-          Write-Host "Deployment completed successfully"
-          "@
-          
-          # Save the script
-          $deployScript | Out-File -FilePath "C:\Temp\deploy-ods.ps1" -Encoding UTF8
-          
-          # Execute the script
-          & powershell.exe -ExecutionPolicy Bypass -File "C:\Temp\deploy-ods.ps1"
+          powershell.exe -ExecutionPolicy Bypass -File .\InitializeDeployment.ps1
           '
           
           az vm run-command invoke \
