--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -39,9 +39,11 @@ jobs:
           Set-Location "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
           
           Write-Host "Creating PowerShell script file..."
-          $content = ''Write-Host "Hello from PowerShell script!"
-          Write-Host "Hello World"''
-          Set-Content -Path "test.ps1" -Value $content
+          $line1 = ''Write-Host "Hello from PowerShell script!"''
+          $line2 = ''Write-Host "Hello World"''
+          
+          Add-Content -Path "test.ps1" -Value $line1
+          Add-Content -Path "test.ps1" -Value $line2
           
           Write-Host "Script file created successfully"
           Get-Content -Path "test.ps1"
