--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -39,7 +39,10 @@ jobs:
           Set-Location "C:\Temp\EdFi.Suite3.RestApi.Databases.Standard"
           
           Write-Host "Creating text file..."
-          "hello world" | Out-File -FilePath "test.txt"
+          "Import-Module .\Deployment.psm1" | Out-File -FilePath "test.txt"
+
+          Write-Host "Creating text file..."
+          "Initialize-DeploymentEnvironment" | Out-File -FilePath "test.txt"
           
           Write-Host "File created successfully"
           Get-Content -Path "test.txt"
