--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -43,11 +43,7 @@ jobs:
           "Initialize-DeploymentEnvironment" | Out-File -FilePath "test.ps1" -Append
           
           Write-Host "File created successfully"
-          Get-Content -Path "test.ps1"
-          
-          Write-Host "Executing PowerShell script..."
-          & powershell.exe -File "test.ps1"
-          '
+          Get-Content -Path "test.ps1"'
           
           az vm run-command invoke \
             --command-id RunPowerShellScript \
