--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -57,4 +57,4 @@ jobs:
             --name "${{ github.event.inputs.vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --command-id RunPowerShellScript \
-            --scripts "Start-Process -FilePath 'powershell.exe' -ArgumentList '-ExecutionPolicy Bypass -File C:\\Temp\\EdFi.Suite3.RestApi.Databases.Standard\\test.ps1' -Verb RunAs"
+            --scripts "Start-Process -FilePath 'powershell.exe' -ArgumentList '-ExecutionPolicy Bypass -File C:\Temp\EdFi.Suite3.RestApi.Databases.Standard\test.ps1' -Verb RunAs"
