--- a/.github/workflows/deploy-ods.yml
+++ b/.github/workflows/deploy-ods.yml
@@ -50,15 +50,11 @@ jobs:
             --name "${{ github.event.inputs.vm_name }}" \
             --resource-group "${{ github.event.inputs.resource_group }}" \
             --scripts "$SCRIPT_CONTENT" 
-
-      - name: Execute PowerShell Command on Azure VM
-        uses: appleboy/ssh-action@v0.1.8
-        with:
-          host: 13.86.213.253
-          username: exampleadmin
-          password: Password1234!
-          port: 22
-          script: powershell.exe -Command "Start-Process -FilePath 'C:\\Temp\\EdFi.Suite3.RestApi.Databases.Standard\\test.ps1' -ArgumentList '-ExecutionPolicy Bypass' -Verb RunAs"
-          timeout: 60s
-          command_timeout: 20m
-          debug: true
+            
+      - name: Run PowerShell script on Azure VM
+        run: |
+          az vm run-command invoke \
+            --name "${{ github.event.inputs.vm_name }}" \
+            --resource-group "${{ github.event.inputs.resource_group }}" \
+            --command-id RunPowerShellScript \
+            --scripts "powershell.exe -ExecutionPolicy Bypass -File 'C:\\Temp\\EdFi.Suite3.RestApi.Databases.Standard\\test.ps1'"
